--- a/_APPAPI/appsettings.json
+++ b/_APPAPI/appsettings.json
@@ -5,5 +5,10 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "Jwt": {
+    "SecretKey": "SuperFashionProjectSd4999999999999",
+    "Issuer": "https://localhost:7042",
+    "Audience": "SuperFashionProject"
+  },
   "AllowedHosts": "*"
 }
