Add SendEmailService,RandomCodeService , add Forgotpassword ,resetpassword

--- a/APPVIEW/appsettings.json
+++ b/APPVIEW/appsettings.json
@@ -1,4 +1,11 @@
 {
+  "SendEmail": {
+    "Email": "dungnguyengiaplai@gmail.com",
+    "DisplayName": "Supper fashion shop",
+    "Password": "vljwizkvlpkdudbd",
+    "Host": "smtp.gmail.com",
+    "Port": 587
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
