--- a/APPVIEW/appsettings.json
+++ b/APPVIEW/appsettings.json
@@ -12,5 +12,14 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+
+  "VNpay": {
+    "Url": "http://sandbox.vnpayment.vn/paymentv2/vpcpay.html",
+    "ReturnUrl": "https://localhost:44393/Home/PaymentConfirm",
+    "TmnCode": "OQK7ZU4V",
+    "HashSecret": "WRKKYLZIEYLLPPFRNNQXVAKXHKGRIEEA"
+
+  }
+
 }
