--- a/APPVIEW/APPVIEW.csproj
+++ b/APPVIEW/APPVIEW.csproj
@@ -11,6 +11,8 @@
 
     <PackageReference Include="ClosedXML" Version="0.102.1" />
 
+    <PackageReference Include="EPPlus" Version="7.0.3" />
+
     <PackageReference Include="iTextSharp" Version="5.5.13.3" />
 
     <PackageReference Include="MailKit" Version="4.3.0" />
